<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic1"
    tools:context="edu.application.yancychan.checkin.activities.LoginActivity">

    <LinearLayout
        android:id="@+id/login_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register_text"
            android:layout_width="213dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="@string/register_title"
            android:clickable="true"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/register_user_username"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/login_username"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/register_user_email"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/login_email"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/register_pw_edt"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/login_pw"
            android:inputType="textPassword"
            android:maxLines="1" />

        <EditText
            android:id="@+id/register_pw_confirm"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/login_pw_confirm"
            android:inputType="textPassword"
            android:maxLines="1" />

        <LinearLayout
            android:id="@+id/register_sex_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:hint="@string/register_boy" />

            <com.github.glomadrian.materialanimatedswitch.MaterialAnimatedSwitch
                android:id="@+id/register_gender_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ball_press_color="@color/colorPrimaryDark"
                app:ball_release_color="@color/colorPrimary"
                app:base_press_color="@color/colorAccentDark"
                app:base_release_color="@color/colorAccent"
                app:icon_press="@mipmap/ic_keyboard_arrow_right_white_36dp"
                app:icon_release="@mipmap/ic_keyboard_arrow_left_white_36dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:hint="@string/register_girl" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_login_btn_bg"
        android:text="@string/register_btn"
        android:layout_below="@+id/login_input_layout"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
