<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic1"
    tools:context="edu.application.yancychan.checkin.activities.LoginActivity">

    <LinearLayout
        android:id="@+id/login_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/retrieve_pw_text"
            android:layout_width="213dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="@string/register_title"
            android:clickable="true"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/retrieve_pw_email"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/login_email"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/retrieve_pw_edt"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/login_pw"
            android:inputType="textPassword"
            android:maxLines="1" />

        <EditText
            android:id="@+id/retrieve_pw_confirm"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/login_pw_confirm"
            android:inputType="textPassword"
            android:maxLines="1" />
    </LinearLayout>

    <Button
        android:id="@+id/retrieve_pw_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_login_btn_bg"
        android:text="@string/confirm"
        android:layout_below="@+id/login_input_layout"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
