<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical"
    tools:context="edu.application.yancychan.checkin.activities.AddCourseActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/changeCourse"
        android:textColor="#333333"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#d0d0d0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/courseName_Change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:text="@string/courseName"
            android:textColor="#333333"
            android:textSize="@dimen/title_size" />

        <EditText
            android:id="@+id/courseName_Change_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/courseName_Change"
            android:background="@null"
            android:hint="@string/courseNamePls"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:textColor="#9f9f9f"
            android:textSize="@dimen/value_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:background="#d0d0d0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/courseTime_Change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:text="@string/courseTime"
            android:textColor="#333333"
            android:textSize="@dimen/title_size" />

        <EditText
            android:id="@+id/courseTime_Change_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/courseTime_Change"
            android:background="@null"
            android:hint="@string/courseTimePls"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:textColor="#9f9f9f"
            android:textSize="@dimen/value_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:background="#d0d0d0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/courseCount_Change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:text="@string/CourseCount"
            android:textColor="#333333"
            android:textSize="@dimen/title_size" />

        <EditText
            android:id="@+id/courseCount_Change_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/courseCount_Change"
            android:background="@null"
            android:hint="@string/CourseCountPls"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:textColor="#9f9f9f"
            android:textSize="@dimen/value_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:background="#d0d0d0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/classTime_Change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:text="@string/ClassTime"
            android:textColor="#333333"
            android:textSize="@dimen/title_size" />

        <EditText
            android:id="@+id/classTime_Change_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/classTime_Change"
            android:background="@null"
            android:hint="@string/ClassTimePls"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:textColor="#9f9f9f"
            android:textSize="@dimen/value_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:background="#d0d0d0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/classLocation_Change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:text="@string/ClassLocation"
            android:textColor="#333333"
            android:textSize="@dimen/title_size" />

        <EditText
            android:id="@+id/classLocation_Change_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/classLocation_Change"
            android:background="@null"
            android:hint="@string/ClassLocationPls"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:textColor="#9f9f9f"
            android:textSize="@dimen/value_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#d0d0d0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/numberOfStudent_Change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:text="@string/numberOfStudent"
            android:textColor="#333333"
            android:textSize="@dimen/title_size" />

        <EditText
            android:id="@+id/numberOfStudent_Change_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/numberOfStudent_Change"
            android:background="@null"
            android:hint="@string/numberOfStudentPls"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:textColor="#9f9f9f"
            android:textSize="@dimen/value_size" />
    </RelativeLayout>

    <Button
        android:id="@+id/save_Change_btn"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_margin="10dp"
        android:background="@drawable/export_btn_selector"
        android:padding="0dp"
        android:text="@string/changeCourse"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

</LinearLayout>