<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    tools:context="edu.application.yancychan.checkin.activities.CourseDetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_course_detail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/course_name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:text="@string/courseName"
            android:textColor="#333333"
            android:textSize="@dimen/title_size" />

        <TextView
            android:id="@+id/course_name_detail_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/course_name_detail"
            android:background="@null"
            android:maxLength="5"
            android:textColor="#9f9f9f"
            android:textSize="@dimen/value_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:background="#d0d0d0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/course_time_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:text="@string/courseTime"
            android:textColor="#333333"
            android:textSize="@dimen/title_size" />

        <TextView
            android:id="@+id/course_time_detail_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/course_time_detail"
            android:background="@null"
            android:maxLength="5"
            android:textColor="#9f9f9f"
            android:textSize="@dimen/value_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:background="#d0d0d0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/course_count_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:text="@string/CourseCount"
            android:textColor="#333333"
            android:textSize="@dimen/title_size" />

        <TextView
            android:id="@+id/course_count_detail_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/course_count_detail"
            android:background="@null"
            android:maxLength="5"
            android:textColor="#9f9f9f"
            android:textSize="@dimen/value_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:background="#d0d0d0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/class_time_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:text="@string/ClassTime"
            android:textColor="#333333"
            android:textSize="@dimen/title_size" />

        <TextView
            android:id="@+id/class_time_detail_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/class_time_detail"
            android:background="@null"
            android:maxLength="5"
            android:textColor="#9f9f9f"
            android:textSize="@dimen/value_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:background="#d0d0d0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/class_location_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:text="@string/ClassLocation"
            android:textColor="#333333"
            android:textSize="@dimen/title_size" />

        <TextView
            android:id="@+id/class_location_detail_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/class_location_detail"
            android:background="@null"
            android:maxLength="5"
            android:textColor="#9f9f9f"
            android:textSize="@dimen/value_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:background="#d0d0d0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/student_number_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:text="@string/numberOfStudent"
            android:textColor="#333333"
            android:textSize="@dimen/title_size" />

        <TextView
            android:id="@+id/student_number_detail_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/student_number_detail"
            android:background="@null"
            android:maxLength="5"
            android:textColor="#9f9f9f"
            android:textSize="@dimen/value_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#d0d0d0" />

    <Button
        android:id="@+id/launch_check_in"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_margin="10dp"
        android:background="@drawable/export_btn_selector"
        android:padding="0dp"
        android:text="@string/launchCheckIn"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

</LinearLayout>
